--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         }
     },
     "require": {
-        "php": ">=8"
+        "php": ">=8.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.12"
     }
 }
